# vdr-gui

./: AUTHORS  Makefile.am  Makefile.in  README  configure  configure.in  vdr-gui.glade  vdr-gui.gladep
debian/: changelog  control  copyright  install  rules
po/: de.po  make_po.sh  messages.pot  po_merge.sh  po_messages.sh  pt.po  templates.pot
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c
